src/scss/includes/_modal.scss
.modal {
    @extend .box;
    z-index: 1;
    position: absolute;
    top: 25%;
    margin: auto;
    width: 50%;
    min-height: 50%;

    @media screen and (max-width: $phone-width) {
        width: 95%;
        top: $navbar-height + 5px;
    }

    .header {
        width: 100%;
        display: flex;
        flex-direction: row;

        .title {
            text-align: center;
            flex-grow: 1;
        }

        .close-button {
            margin-right: 10px;
            margin-top: 10px;
            img {
                width: 20px;
            }
        }
    }
}

